# tkinter-example

./: README.md  pyproject.toml
src/: controller.py  main.py  model.py  view.py
